@@ -1,3 +1,9 @@
+2009-10-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/addons.c, src/bookmarklist.c, src/bookmarklist.h:
+   Add an 'activate' keybinding.
+
+
 2009-10-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/Makefile.am, src/addons.c, src/bookmarklist.c,
